2005-10-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JViewport.java
	(ViewListener.componentResized): Only call revalidate instead of
	going through weird reverting code.
	(JViewport): First call updateUI, then set layout.
	(setViewPosition): Don't do anything if there is no real
	change.
	(setView): Don't remove the old component. This is handled by
	addImpl. Call revalidate().
	* javax/swing/ViewportLayout.java
	(layoutContainer): Preferably set view size to it's preferredSize
	instead of its minimumSize.

2005-10-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/JTextComponent.java
	(getToolTipText): New method.

2005-10-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Fixed value for
	Table.focusCellHighlightBorder.

2005-10-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicButtonUI.java
	(installDefaults): Use new LookAndFeel install* methods. Use
	UIManager.get* methods instead of UIManager.getDefaults().get*
	methods.
	* javax/swing/plaf/basic/BasicCheckBoxMenuItemUI.java
	(installDefaults): Use UIManager.get* methods instead of
	UIManager.getDefaults().get* methods.
	* javax/swing/plaf/basic/BasicColorChooserUI.java
	(installDefaults): Use new LookAndFeel install* methods.
	* javax/swing/plaf/basic/BasicComboBoxUI.java
	(installDefaults): Use new LookAndFeel install* methods. Use
	UIManager.get* methods instead of UIManager.getDefaults().get*
	methods.
	* javax/swing/plaf/basic/BasicDesktopPaneUI.java
	(installDefaults): Only install background color, if installed
	color is null or an UIResource instance.
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(installDefaults): Use new LookAndFeel install* methods.
	* javax/swing/plaf/basic/BasicLabelUI.java
	(installDefaults): Use new LookAndFeel install* methods.
	* javax/swing/plaf/basic/BasicListUI.java
	(installDefaults): Use new LookAndFeel install* methods. Use